# PriceChecker

./: .gitignore  DOCKERFILE  LICENSE  docker-compose.yml  pyproject.toml  readme.md
src/: __init__.py  cli.py  models.py
src/core/: __init__.py  cache.py  database.py  rate_limiter.py
src/features/: __init__.py  fetchers.py  notifications.py
src/utils/: __init__.py  logging_config.py
tests/: test-models.py  test_integrations.py
tests/Unit_tests/: test_models.py
tests/Unit_tests/core/: test_cache.py  test_database.py  test_rate-limiter.py
tests/Unit_tests/features/: test_fetchers.py  test_notifications.py
tests/core/: test-database.py  test-rate-limiter.py
tests/utils/: test_logging.py
